2017-09-29 Removed gap definition from html attributes in text module
2017-09-28 Fixed accessing window.top properties
2017-09-28 Fixed random order in Choice module
2017-09-26 Added sendMessage command in iFrame module
2017-09-25 Added alternative text and keyboard navigation in Zoom Image module
2017-09-22 Fixed Assessments Navigation Bar page selecting and added keyboard navigation. Changed keyboard navigation in Navigation Bar.
2017-09-22 Added new addon Catch
2017-09-19 Added notification about setting header/footer.
2017-09-18 Setting individual header and footer for pages.
2017-09-15 Removed changing controls visibility in glossary addon
2017-09-15 Added alternative text property for video and image
2017-09-14 Fixed events problem in eKeyboard and devices with touchscreen and mouse
2017-09-14 Added new addon Heading
2017-09-12 Fixed problem with dragging in source list.
2017-09-11 Added ended event for animation addon
2017-09-11 Fixed problem with preview and Slideshow. Fixed problem with playing slideshow without loaded audio.
2017-09-04 Added WCAG support for Image Gap and Image Source
2017-09-04 Fixed problem with multiple calling WCAG on elements. Added WCAG for Image ID.
2017-08-31 Added WCAG support for Table.
2017-08-29 Added message watcher for listening on keydown event outside iframe for WCAG
2017-08-25 Added WCAG support for Image ID
2017-08-25 Added full support for WCAG in Text module
2017-08-24 Added WCAG support for Multiplegap
2017-08-23 Fixed problem with disabling source list by Limited check. Removed commons.js from repository. Added to addons tests building commons.js.
2017-08-22 Fixed problem with using chars and numbers in math addon.
2017-08-22 Added to audio force loading audio. Upgraded sinon to 2.4.1.
2017-08-17 Fixed problem with scaling popup
2017-08-14 Added go to last visited page for previous page button.
2017-08-14 Fixed problem with default keyboard navigation in browser while using player keyboard navigation